--- a/src/app/sistema/rh/controle-vt/controle-vt.component.html
+++ b/src/app/sistema/rh/controle-vt/controle-vt.component.html
@@ -19,30 +19,130 @@
         </div>
 
         <div class="tabela col-12 mt-4 row">
-            <table class="col-11 m-auto">
-                <thead class="col-12">
-                    <tr>
-                        <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Colaborador</td>
-                        <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">VT</td>
-                        <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Dias</td>
-                        <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Total</td>
-                    </tr>
-                </thead>
-                <tbody *ngFor="let oneColab of colab">
-                    <tr>
-                        <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">{{oneColab.name}} {{oneColab.surname}}</td>
-                        <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">{{oneColab.vale}}</td>
-                        <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">
-                            <p class="h-100 m-0" *ngIf="oneColab.workDays!=null">{{oneColab.workDays}}</p>
-                            <p class="h-100 m-0" *ngIf="oneColab.workDays==null">-</p>
-                        </td>
-                        <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">
-                           <p class="h-100 m-0" *ngIf="oneColab.totalValue!=null">R$: {{oneColab.totalValue}}</p>
-                           <p class="h-100 m-0" *ngIf="oneColab.totalValue==null">-</p>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+
+                <div class="col-12 row border border-1 border-custom-dark m-0 p-0">
+                    <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark">
+                        <p class="w-100 h-100 text-center text-custom-dark">
+                            Colaborador
+                        </p>
+                    </div>
+                    <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark">
+                        <p class="w-100 h-100 text-center text-custom-dark">
+                            VT
+                        </p>
+                    </div>
+                    <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark">
+                        <p class="w-100 h-100 text-center text-custom-dark">
+                            Dias
+                        </p>
+                    </div>
+                    <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark">
+                        <p class="w-100 h-100 text-center text-custom-dark">
+                            Total
+                        </p>
+                    </div>
+                </div>
+                <form class="col-12 row m-0 p-0" [formGroup]="vtForm" (submit)="salvar(vtForm.value)">
+                    <div class="col-12 row border border-1 border-custom-dark m-0 p-0" *ngFor="let value of vt['value']; let i = index" formArrayName="vt">
+                        <div class="col-12 row m-0 p-0" [formGroupName]="i">
+                            <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark">
+                                <div class="p-0 m-0 form-floating">
+                                    <input formControlName="name"
+                                    class="form-control form-control-lg shadow-sm" type="text"
+                                    placeholder="Dias trabalhados" readonly>
+                                </div>
+                            </div>
+                            <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark">
+                                <div class="p-0 m-0 form-floating">  
+                                    <input formControlName="vt"
+                                        class="form-control form-control-lg shadow-sm" type="text"
+                                        placeholder="Dias trabalhados" readonly>
+                                </div>
+                            </div>
+                            <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark" *ngIf="value.vt=='Sim'">
+                                <div class="p-0 m-0 form-floating">
+                                    <input formControlName="workDays"
+                                    class="form-control form-control-lg shadow-sm" type="number"
+                                    placeholder="Dias trabalhados">
+                                    <label class="pl-1 pt-1 small text-truncate text-custom-dark">Dias trabalhados</label>
+                                </div>
+                            </div>
+                            <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark" *ngIf="value.vt=='Não'">
+                                <div class="p-0 m-0 form-floating">
+                                    <input formControlName="workDays"
+                                    class="form-control form-control-lg shadow-sm" type="number"
+                                    placeholder="Dias trabalhados" readonly>
+                                    <label class="pl-1 pt-1 small text-truncate text-custom-dark">Dias trabalhados</label>
+                                </div>
+                            </div>
+                            <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark">
+                                <div class="p-0 m-0 form-floating">  
+                                    <input formControlName="total"
+                                        class="form-control form-control-lg shadow-sm" type="number"
+                                        placeholder="Dias trabalhados" readonly>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row m-0 mt-4 justify-content-end">
+    
+                        <!-- Botão Salvar -->
+                        <div class="col-4 d-grid px-2 p-0 m-0">
+                          <button type="submit"
+                            class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm">
+                            <h5 class="fw-normal my-auto text-truncate text-custom-dark">Salvar</h5>
+                          </button>
+                        </div>
+              
+                    </div>
+                </form>
+                <!-- <table class="col-11 m-auto">
+                    <thead class="col-12">
+                        <tr>
+                            <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Colaborador</td>
+                            <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">VT</td>
+                            <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Dias</td>
+                            <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Total</td>
+                        </tr>
+                    </thead> -->
+
+
+                    <!-- <tbody *ngFor="let oneColab of colab">
+                        <tr>
+                            <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">
+                                <div class="p-0 m-0 form-floating">
+                                    <input formControlName="name"
+                                    class="form-control form-control-lg rounded-15 shadow-sm" type="text"
+                                    placeholder="Dias trabalhados" readonly>
+                                </div>
+                            </td>
+                            <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">
+                                <div class="p-0 m-0 form-floating">  
+                                    <input formControlName="vt"
+                                        class="form-control form-control-lg rounded-15 shadow-sm" type="text"
+                                        placeholder="Dias trabalhados" readonly>
+                                </div>
+                            </td>
+                            <td class="col-2 lead text-custom-dark border border-custom-dark border-1 fw-normal">
+                                <div class="p-0 m-0 form-floating">
+                                    <input formControlName="workDays"
+                                    class="form-control form-control-lg rounded-15 shadow-sm" type="number"
+                                    placeholder="Dias trabalhados">
+                                    <label class="pl-1 pt-1 small text-truncate text-custom-dark">Dias trabalhados</label>
+                                </div>
+                            </td>
+                            <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">
+                                <div class="p-0 m-0 form-floating">  
+                                    <input formControlName="total"
+                                        class="form-control form-control-lg rounded-15 shadow-sm" type="text"
+                                        placeholder="Dias trabalhados" readonly>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody> 
+
+
+                </table> -->
         </div>
          <div class="col-12 row">
                 <div class="col-10 row">
@@ -58,14 +158,15 @@
                     </div> -->
                 </div>
                 <div class="col-2 row">
-                    <div class="col px-0 m-0 text-center d-flex align-items-center" for="add-falta">
-                        <i class="bi bi-file-earmark-pdf-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer"></i>
-                    </div>
-                    <!-- bi bi-file-excel -->
-                    <div class="col px-0 m-0 text-center d-flex align-items-center" for="add-falta">
-                        <i class="bi bi-file-excel icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer"></i>
-                    </div>
+                    <button class="m-1 col px-0 m-0 pdf-button rounded text-white text-center border-0" for="add-falta" data-bs-toggle="modal" data-bs-target="#generateVtPdf">
+                        <i class="bi bi-file-earmark-pdf-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark text-white" cursor="pointer" ></i>
+                    </button>
+                    <button class="m-1 col px-0 m-0 excel-button rounded text-center border-0" for="add-falta">
+                        <i class="bi bi-file-excel icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark text-white" cursor="pointer"></i>
+                    </button>
                 </div>
+                
             </div>
     </div>
 </div>
+<app-relatorio-vt></app-relatorio-vt>
