--- a/src/app/sistema/rh/controle-vt/controle-vt.component.scss
+++ b/src/app/sistema/rh/controle-vt/controle-vt.component.scss
@@ -1,3 +1,18 @@
 .tabela{
     min-height: 300px;
 }
+.pdf-button{
+    background: #ff6060;
+}
+
+.pdf-button:hover{
+    background: #ff7e7e;
+}
+
+.excel-button{
+   background: #51ff65;
+}
+
+.excel-button:hover{
+    background: #78fc87;
+}
